--- a/Teilwind/output.css
+++ b/Teilwind/output.css
@@ -27,7 +27,6 @@
     --color-amber-900: oklch(41.4% 0.112 45.904);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
     --color-yellow-900: oklch(42.1% 0.095 57.708);
-    --color-green-100: oklch(96.2% 0.044 156.743);
     --color-green-200: oklch(92.5% 0.084 155.995);
     --color-green-300: oklch(87.1% 0.15 154.449);
     --color-green-400: oklch(79.2% 0.209 151.711);
@@ -35,11 +34,21 @@
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-green-800: oklch(44.8% 0.119 151.328);
     --color-green-900: oklch(39.3% 0.095 152.535);
+    --color-cyan-50: oklch(98.4% 0.019 200.873);
     --color-cyan-600: oklch(60.9% 0.126 221.723);
     --color-blue-900: oklch(37.9% 0.146 265.522);
+    --color-indigo-50: oklch(96.2% 0.018 272.314);
+    --color-pink-50: oklch(97.1% 0.014 343.198);
+    --color-pink-200: oklch(89.9% 0.061 343.231);
     --color-pink-300: oklch(82.3% 0.12 346.018);
+    --color-pink-400: oklch(71.8% 0.202 349.761);
+    --color-pink-500: oklch(65.6% 0.241 354.308);
+    --color-pink-600: oklch(59.2% 0.249 0.584);
+    --color-pink-700: oklch(52.5% 0.223 3.958);
     --color-pink-800: oklch(45.9% 0.187 3.815);
     --color-pink-900: oklch(40.8% 0.153 2.432);
+    --color-pink-950: oklch(28.4% 0.109 3.907);
+    --color-rose-100: oklch(94.1% 0.03 12.58);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-900: oklch(21% 0.034 264.665);
@@ -202,6 +211,72 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
+  .fixed {
+    position: fixed;
+  }
+  .relative {
+    position: relative;
+  }
+  .inset-3 {
+    inset: calc(var(--spacing) * 3);
+  }
+  .inset-10 {
+    inset: calc(var(--spacing) * 10);
+  }
+  .inset-32 {
+    inset: calc(var(--spacing) * 32);
+  }
+  .inset-37 {
+    inset: calc(var(--spacing) * 37);
+  }
+  .inset-100 {
+    inset: calc(var(--spacing) * 100);
+  }
+  .inset-full {
+    inset: 100%;
+  }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
+  .top-10 {
+    top: calc(var(--spacing) * 10);
+  }
+  .top-100 {
+    top: calc(var(--spacing) * 100);
+  }
+  .top-250 {
+    top: calc(var(--spacing) * 250);
+  }
+  .right-0 {
+    right: calc(var(--spacing) * 0);
+  }
+  .right-1 {
+    right: calc(var(--spacing) * 1);
+  }
+  .right-40 {
+    right: calc(var(--spacing) * 40);
+  }
+  .right-60 {
+    right: calc(var(--spacing) * 60);
+  }
+  .right-100 {
+    right: calc(var(--spacing) * 100);
+  }
+  .right-150 {
+    right: calc(var(--spacing) * 150);
+  }
+  .right-250 {
+    right: calc(var(--spacing) * 250);
+  }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
+  .bottom-1 {
+    bottom: calc(var(--spacing) * 1);
+  }
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
@@ -223,20 +298,78 @@
   .table {
     display: table;
   }
+  .size-0 {
+    width: calc(var(--spacing) * 0);
+    height: calc(var(--spacing) * 0);
+  }
+  .size-0\.5 {
+    width: calc(var(--spacing) * 0.5);
+    height: calc(var(--spacing) * 0.5);
+  }
+  .size-1 {
+    width: calc(var(--spacing) * 1);
+    height: calc(var(--spacing) * 1);
+  }
+  .size-1\/4 {
+    width: calc(1/4 * 100%);
+    height: calc(1/4 * 100%);
+  }
+  .size-5 {
+    width: calc(var(--spacing) * 5);
+    height: calc(var(--spacing) * 5);
+  }
+  .size-9 {
+    width: calc(var(--spacing) * 9);
+    height: calc(var(--spacing) * 9);
+  }
+  .size-10 {
+    width: calc(var(--spacing) * 10);
+    height: calc(var(--spacing) * 10);
+  }
+  .size-50 {
+    width: calc(var(--spacing) * 50);
+    height: calc(var(--spacing) * 50);
+  }
+  .size-60 {
+    width: calc(var(--spacing) * 60);
+    height: calc(var(--spacing) * 60);
+  }
+  .size-80 {
+    width: calc(var(--spacing) * 80);
+    height: calc(var(--spacing) * 80);
+  }
+  .size-96 {
+    width: calc(var(--spacing) * 96);
+    height: calc(var(--spacing) * 96);
+  }
+  .size-180 {
+    width: calc(var(--spacing) * 180);
+    height: calc(var(--spacing) * 180);
+  }
+  .size-500 {
+    width: calc(var(--spacing) * 500);
+    height: calc(var(--spacing) * 500);
+  }
+  .size-\[80px\] {
+    width: 80px;
+    height: 80px;
+  }
+  .size-fit {
+    width: fit-content;
+    height: fit-content;
+  }
+  .size-full {
+    width: 100%;
+    height: 100%;
+  }
   .h-1 {
     height: calc(var(--spacing) * 1);
   }
   .h-1\/2 {
     height: calc(1/2 * 100%);
   }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
-  }
   .h-100 {
     height: calc(var(--spacing) * 100);
-  }
-  .h-200 {
-    height: calc(var(--spacing) * 200);
   }
   .h-fit {
     height: fit-content;
@@ -244,17 +377,11 @@
   .h-full {
     height: 100%;
   }
-  .max-h-1 {
-    max-height: calc(var(--spacing) * 1);
+  .h-screen {
+    height: 100vh;
   }
   .max-h-100 {
     max-height: calc(var(--spacing) * 100);
-  }
-  .max-h-1000 {
-    max-height: calc(var(--spacing) * 1000);
-  }
-  .min-h-200 {
-    min-height: calc(var(--spacing) * 200);
   }
   .min-h-400 {
     min-height: calc(var(--spacing) * 400);
@@ -327,8 +454,20 @@
   .border-amber-800 {
     border-color: var(--color-amber-800);
   }
+  .bg-amber-200 {
+    background-color: var(--color-amber-200);
+  }
+  .bg-amber-400 {
+    background-color: var(--color-amber-400);
+  }
   .bg-amber-500 {
     background-color: var(--color-amber-500);
+  }
+  .bg-amber-600 {
+    background-color: var(--color-amber-600);
+  }
+  .bg-amber-800 {
+    background-color: var(--color-amber-800);
   }
   .bg-amber-900 {
     background-color: var(--color-amber-900);
@@ -339,14 +478,8 @@
   .bg-blue-900 {
     background-color: var(--color-blue-900);
   }
-  .bg-gray-100 {
-    background-color: var(--color-gray-100);
-  }
   .bg-gray-500 {
     background-color: var(--color-gray-500);
-  }
-  .bg-gray-900 {
-    background-color: var(--color-gray-900);
   }
   .bg-green-200 {
     background-color: var(--color-green-200);
@@ -366,11 +499,23 @@
   .bg-green-800 {
     background-color: var(--color-green-800);
   }
-  .bg-green-900 {
-    background-color: var(--color-green-900);
+  .bg-pink-200 {
+    background-color: var(--color-pink-200);
   }
   .bg-pink-300 {
     background-color: var(--color-pink-300);
+  }
+  .bg-pink-400 {
+    background-color: var(--color-pink-400);
+  }
+  .bg-pink-500 {
+    background-color: var(--color-pink-500);
+  }
+  .bg-pink-600 {
+    background-color: var(--color-pink-600);
+  }
+  .bg-pink-700 {
+    background-color: var(--color-pink-700);
   }
   .bg-pink-800 {
     background-color: var(--color-pink-800);
@@ -378,14 +523,20 @@
   .bg-pink-900 {
     background-color: var(--color-pink-900);
   }
+  .bg-pink-950 {
+    background-color: var(--color-pink-950);
+  }
+  .bg-red-600 {
+    background-color: var(--color-red-600);
+  }
   .bg-red-900 {
     background-color: var(--color-red-900);
   }
   .bg-yellow-400 {
     background-color: var(--color-yellow-400);
   }
-  .bg-yellow-900 {
-    background-color: var(--color-yellow-900);
+  .bg-center {
+    background-position: center;
   }
   .p-3 {
     padding: calc(var(--spacing) * 3);
@@ -423,6 +574,9 @@
   .text-amber-300 {
     color: var(--color-amber-300);
   }
+  .text-pink-50 {
+    color: var(--color-pink-50);
+  }
   .text-red-100 {
     color: var(--color-red-100);
   }
@@ -453,6 +607,12 @@
   .underline {
     text-decoration-line: underline;
   }
+  .inset-ring-indigo-50 {
+    --tw-inset-ring-color: var(--color-indigo-50);
+  }
+  .inset-ring-rose-100 {
+    --tw-inset-ring-color: var(--color-rose-100);
+  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
@@ -479,6 +639,20 @@
   .outline-amber-800 {
     outline-color: var(--color-amber-800);
   }
+  .text-shadow-cyan-50 {
+    --tw-text-shadow-color: oklch(98.4% 0.019 200.873);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-text-shadow-color: color-mix(in oklab, var(--color-cyan-50) var(--tw-text-shadow-alpha), transparent);
+    }
+  }
+  .hover\:size-4 {
+    &:hover {
+      @media (hover: hover) {
+        width: calc(var(--spacing) * 4);
+        height: calc(var(--spacing) * 4);
+      }
+    }
+  }
   .hover\:w-200 {
     &:hover {
       @media (hover: hover) {
@@ -504,11 +678,22 @@
   inherits: false;
   initial-value: solid;
 }
+@property --tw-text-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-text-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-outline-style: solid;
+      --tw-text-shadow-color: initial;
+      --tw-text-shadow-alpha: 100%;
     }
   }
 }
